--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ footer{
 <div>
 <h1>Gorilla Trekking Uganda</h1>
 <p>The Ultimate Wildlife Experience in Bwindi Impenetrable National Park</p>
-<a href="https://steadysafaris.com/contact-us/" class="btn">Request Custom Safari</a>
+<a href="https://steadysafaris.com" class="btn">Request Custom Safari</a>
 </div>
 </header>
 
