--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="google-site-verification" content="Ly2nV1CYzl7bEE_IWe7947ANqNdO5XksaTkgWPzvtMQ" />
 <title>Gorilla Trekking Uganda – Ultimate Guide & Safari Packages | Steady Safaris Limited</title>
 
 <meta name="description" content="Complete guide to Gorilla Trekking Uganda. Learn about permits, cost, best time, Bwindi sectors and safari packages with Steady Safaris Limited. Book your gorilla trekking adventure today.">
